// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcLoading > should not render the loading if the show prop is set to false 1`] = `
<div
  class="ec-loading"
  data-test="ec-loading"
>
  <!--v-if-->
  <div
    class="ec-loading__content ec-loading__content--is-transparent"
    data-test="ec-loading__content"
  >
    
    
  </div>
</div>
`;

exports[`EcLoading > should render as expected 1`] = `
<div
  class="ec-loading"
  data-test="ec-loading"
>
  <div
    class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
    data-test="ec-loading__backdrop"
  >
    <svg
      class="ec-icon ec-loading__icon"
      data-test="ec-loading__icon"
      height="48"
      width="48"
    >
      <use
        xlink:href="#ec-simple-loading"
      />
    </svg>
  </div>
  <div
    class="ec-loading__content ec-loading__content--is-transparent"
    data-test="ec-loading__content"
  >
    
    
  </div>
</div>
`;

exports[`EcLoading > should render the given slot 1`] = `
<div
  class="ec-loading"
  data-test="ec-loading"
>
  <div
    class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
    data-test="ec-loading__backdrop"
  >
    <svg
      class="ec-icon ec-loading__icon"
      data-test="ec-loading__icon"
      height="48"
      width="48"
    >
      <use
        xlink:href="#ec-simple-loading"
      />
    </svg>
  </div>
  <div
    class="ec-loading__content ec-loading__content--is-transparent"
    data-test="ec-loading__content"
  >
    
    <p>
      Random text
    </p>
    
  </div>
</div>
`;

exports[`EcLoading > should render the loading with a given icon size when the prop size is set to not 48 1`] = `
<div
  class="ec-loading"
  data-test="ec-loading"
>
  <div
    class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
    data-test="ec-loading__backdrop"
  >
    <svg
      class="ec-icon ec-loading__icon"
      data-test="ec-loading__icon"
      height="30"
      width="30"
    >
      <use
        xlink:href="#ec-simple-loading"
      />
    </svg>
  </div>
  <div
    class="ec-loading__content ec-loading__content--is-transparent"
    data-test="ec-loading__content"
  >
    
    
  </div>
</div>
`;

exports[`EcLoading > should render the loading with visible content if the transparent prop is set to false and the show is set to false 1`] = `
<div
  class="ec-loading"
  data-test="ec-loading"
>
  <!--v-if-->
  <div
    class="ec-loading__content ec-loading__content--is-transparent"
    data-test="ec-loading__content"
  >
    
    
  </div>
</div>
`;

exports[`EcLoading > should render the loading without the content visible if the transparent prop is set to false 1`] = `
<div
  class="ec-loading"
  data-test="ec-loading"
>
  <div
    class="ec-loading__backdrop"
    data-test="ec-loading__backdrop"
  >
    <svg
      class="ec-icon ec-loading__icon"
      data-test="ec-loading__icon"
      height="48"
      width="48"
    >
      <use
        xlink:href="#ec-simple-loading"
      />
    </svg>
  </div>
  <div
    class="ec-loading__content"
    data-test="ec-loading__content"
  >
    
    
  </div>
</div>
`;
